skiplang/compiler/invalid_tests/typechecking/cpp_export_base_class.sk
@cpp_export("sk_bad")
base class Bad{}

fun main(): void {
  print_string("x")
}
